--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@aws-sdk/client-dynamodb": "^3.18.0",
     "@aws-sdk/lib-dynamodb": "^3.18.0",
     "@types/chunk": "^0.0.0",
+    "aws-sdk": "^2.1187.0",
     "body-parser": "^1.19.0",
     "chunk": "^0.0.3",
     "cors": "^2.8.5",
