--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.142.0",
+    "@aws-sdk/client-sqs": "^3.145.0",
     "@aws-sdk/lib-dynamodb": "^3.142.0",
+    "@types/aws-lambda": "^8.10.102",
     "@types/chunk": "^0.0.0",
+    "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1187.0",
     "body-parser": "^1.19.0",
     "chunk": "^0.0.3",
