--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@aws-sdk/client-dynamodb": "^3.142.0",
     "@aws-sdk/client-sqs": "^3.145.0",
     "@aws-sdk/lib-dynamodb": "^3.142.0",
+    "@js-joda/core": "^5.3.0",
     "@types/aws-lambda": "^8.10.102",
     "@types/chunk": "^0.0.0",
     "aws-lambda": "^1.0.7",
