--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.7",
-    "@types/express": "^4.17.8",
-    "@types/node": "^14.10.0",
+    "@types/express": "^4.17.13",
+    "@types/node": "^15.3.0",
     "typescript": "^4.0.2"
   },
   "dependencies": {
@@ -24,6 +24,7 @@
     "@aws-sdk/client-sqs": "^3.145.0",
     "@aws-sdk/lib-dynamodb": "^3.142.0",
     "@js-joda/core": "^5.3.0",
+    "@shineiichijo/marika": "^2.0.3",
     "@types/aws-lambda": "^8.10.102",
     "@types/chunk": "^0.0.0",
     "aws-lambda": "^1.0.7",
@@ -32,7 +33,7 @@
     "chunk": "^0.0.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "express": "^4.18.1",
     "jikants": "^1.2.13",
     "jstat": "^1.9.4",
     "moment": "^2.27.0",
