--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.13",
-    "@types/node": "^15.3.0",
+    "@types/node": "^16.11.51",
     "typescript": "^4.0.2"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.142.0",
+    "@aws-sdk/client-s3": "^3.154.0",
     "@aws-sdk/client-sqs": "^3.145.0",
     "@aws-sdk/lib-dynamodb": "^3.142.0",
     "@js-joda/core": "^5.3.0",
