--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wrongopinions",
+  "name": "wrongopinions-server",
   "version": "0.0.1",
   "description": "Your opinion is wrong",
   "main": "index.js",
@@ -11,13 +11,15 @@
     "email": "josh@ymindustries.com",
     "url": "https://joshwalsh.me"
   },
-  "license": "MIT",
+	"private": "true",
+  "license": "GPL",
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.51",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "wrongopinions-common": "file:../common"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.142.0",
