--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,11 @@
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.51",
-    "typescript": "^4.0.2",
-    "wrongopinions-common": "file:../common"
+    "typescript": "^4.8.2",
+    "wrongopinions-common": "file:../common",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "ts-loader": "^9.3.1"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.142.0",
@@ -27,7 +30,7 @@
     "@aws-sdk/client-sqs": "^3.145.0",
     "@aws-sdk/lib-dynamodb": "^3.142.0",
     "@js-joda/core": "^5.3.0",
-    "@shineiichijo/marika": "^2.0.3",
+    "@shineiichijo/marika": "^2.0.5",
     "@types/aws-lambda": "^8.10.102",
     "@types/chunk": "^0.0.0",
     "aws-lambda": "^1.0.7",
@@ -40,6 +43,7 @@
     "jstat": "^1.9.4",
     "moment": "^2.27.0",
     "myanimelist-api": "^1.0.1",
-    "ts-demand": "^1.0.1"
+    "ts-demand": "^1.0.1",
+    "serialize-error": "^11.0.0"
   }
 }
