--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,10 +2,13 @@
   "include": [
     "src"
   ],
+  "exclude": [
+    "node_modules"
+  ],
   "compilerOptions": {
     /* Basic Options */
-    "target": "ESNEXT",                          /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */
-    "module": "commonjs",                     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
+    "target": "ESNEXT",                       /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */
+    "module": "commonjs",                       /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
     // "lib": [],                             /* Specify library files to be included in the compilation. */
      "allowJs": true,
     // "checkJs": true,                       /* Report errors in .js files. */
@@ -14,7 +17,7 @@
     // "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
     "sourceMap": true,
     // "outFile": "./",                       /* Concatenate and emit output to single file. */
-    "outDir": "./dist/",
+    "outDir": "./build/",
     // "rootDir": "./",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "composite": true,                     /* Enable project compilation */
     // "removeComments": true,                /* Do not emit comments to output. */
