--- a/server/package.json
+++ b/server/package.json
@@ -18,11 +18,11 @@
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.51",
+    "ts-loader": "^9.3.1",
     "typescript": "^4.8.2",
-    "wrongopinions-common": "file:../common",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
-    "ts-loader": "^9.3.1"
+    "wrongopinions-common": "file:../common"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.142.0",
@@ -40,10 +40,11 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.18.1",
+    "get-stream": "^6.0.1",
     "jstat": "^1.9.4",
     "moment": "^2.27.0",
     "myanimelist-api": "^1.0.1",
-    "ts-demand": "^1.0.1",
-    "serialize-error": "^11.0.0"
+    "serialize-error": "^11.0.0",
+    "ts-demand": "^1.0.1"
   }
 }
