--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Your opinion is wrong",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack"
   },
   "author": {
     "name": "Joshua Walsh",
