--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "private": "true",
   "license": "GPL",
   "devDependencies": {
+    "@types/async": "^3.2.15",
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.13",
@@ -33,6 +34,7 @@
     "@shineiichijo/marika": "^2.0.5",
     "@types/aws-lambda": "^8.10.102",
     "@types/chunk": "^0.0.0",
+    "async": "^3.2.4",
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1187.0",
     "body-parser": "^1.19.0",
