--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "dom-to-image-more": "^2.12.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -25,6 +26,7 @@
     "@angular-devkit/build-angular": "^14.2.2",
     "@angular/cli": "~14.2.2",
     "@angular/compiler-cli": "^14.2.0",
+    "@types/dom-to-image": "^2.6.4",
     "typescript": "~4.7.2"
   }
 }
