--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "dom-to-image-more": "^2.12.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "wrongopinions-common": "file:../common"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.2",
