Initial attempt at formatting image header

--- a/client/angular.json
+++ b/client/angular.json
@@ -101,6 +101,9 @@
             "scripts": []
           }
         }
+      },
+      "i18n": {
+        "sourceLocale": "en-AU"
       }
     }
   },
