--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,13 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@fontsource/open-sans": "^4.5.11",
+    "@fontsource/roboto-mono": "^4.5.8",
     "dom-to-image-more": "^2.12.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "wrongopinions-common": "file:../common"
+    "wrongopinions-common": "file:../common",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.2",
