--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "@aws-sdk/client-s3": "^3.154.0",
     "@aws-sdk/client-sqs": "^3.145.0",
     "@aws-sdk/lib-dynamodb": "^3.142.0",
+    "@aws-sdk/lib-storage": "^3.200.0",
     "@js-joda/core": "^5.3.0",
     "@shineiichijo/marika": "^2.0.6",
     "@types/aws-lambda": "^8.10.102",
