Add font dependencies
I forgot to commit these earlier

--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,11 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@fontsource/carter-one": "^4.5.9",
+    "@fontsource/itim": "^4.5.10",
     "@fontsource/open-sans": "^4.5.11",
     "@fontsource/roboto-mono": "^4.5.8",
+    "@fontsource/rowdies": "^4.5.8",
     "@svgdotjs/svg.js": "^3.1.2",
     "chart.js": "^3.9.1",
     "dom-to-image-more": "^2.13.0",
