--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@fontsource/open-sans": "^4.5.11",
     "@fontsource/roboto-mono": "^4.5.8",
     "@fontsource/rowdies": "^4.5.8",
+    "@svgdotjs/svg.filter.js": "^3.0.8",
     "@svgdotjs/svg.js": "^3.1.2",
     "chart.js": "^3.9.1",
     "dom-to-image-more": "^2.13.0",
