--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "@svgdotjs/svg.js": "^3.1.2",
     "chart.js": "^3.9.1",
     "dom-to-image-more": "^2.13.0",
+    "humanize-duration": "^3.28.0",
     "rxjs": "~7.5.0",
     "string-algorithms": "^1.0.31",
     "ts-demand": "^1.0.1",
@@ -38,6 +39,7 @@
     "@angular/cli": "~14.2.2",
     "@angular/compiler-cli": "^14.2.0",
     "@types/dom-to-image": "^2.6.4",
+    "@types/humanize-duration": "^3.27.1",
     "typescript": "~4.7.2"
   }
 }
