--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.13",
+    "@types/follow-redirects": "^1.14.1",
     "@types/node": "^16.11.51",
     "ts-loader": "^9.3.1",
     "typescript": "^4.8.2",
@@ -42,6 +43,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.18.1",
+    "follow-redirects": "^1.15.2",
     "get-stream": "^6.0.1",
     "jstat": "^1.9.4",
     "moment": "^2.27.0",
