--- a/client/package.json
+++ b/client/package.json
@@ -22,10 +22,11 @@
     "@fontsource/open-sans": "^4.5.11",
     "@fontsource/roboto-mono": "^4.5.8",
     "@fontsource/rowdies": "^4.5.8",
+    "@joshuawalsh/gajraj-one": "^1.0.0",
     "@svgdotjs/svg.filter.js": "^3.0.8",
     "@svgdotjs/svg.js": "^3.1.2",
     "chart.js": "^3.9.1",
-    "dom-to-image-more": "^2.13.0",
+    "dom-to-image-more": "^3.1.0",
     "humanize-duration": "^3.28.0",
     "rxjs": "~7.5.0",
     "sanitize-filename": "^1.6.3",
