--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "wrongopinions-common": "file:../common"
   },
   "dependencies": {
+    "@aws-sdk/client-cloudwatch": "^3.332.0",
     "@aws-sdk/client-dynamodb": "^3.142.0",
     "@aws-sdk/client-s3": "^3.154.0",
     "@aws-sdk/client-sqs": "^3.145.0",
@@ -40,11 +41,13 @@
     "axios": "^0.27.2",
     "body-parser": "^1.19.0",
     "chunk": "^0.0.3",
+    "cloudwatch-metrics": "^1.3.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.18.1",
     "follow-redirects": "^1.15.2",
     "get-stream": "^6.0.1",
+    "graceful-goodbye": "^1.2.1",
     "jstat": "^1.9.4",
     "moment": "^2.27.0",
     "myanimelist-api": "^1.0.1",
