Use official fontsource package for gajraj-one
Now that fontsource/fontsource#636 is fixed

--- a/client/package.json
+++ b/client/package.json
@@ -18,11 +18,11 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@fontsource/carter-one": "^4.5.9",
+    "@fontsource/gajraj-one": "^5.0.20",
     "@fontsource/itim": "^4.5.10",
     "@fontsource/open-sans": "^4.5.11",
     "@fontsource/roboto-mono": "^4.5.8",
     "@fontsource/rowdies": "^4.5.8",
-    "@joshuawalsh/gajraj-one": "^1.0.0",
     "@svgdotjs/svg.filter.js": "^3.0.8",
     "@svgdotjs/svg.js": "^3.1.2",
     "chart.js": "^3.9.1",
