Update names to reflect upstream (meatspace) changes

--- a/server/package.json
+++ b/server/package.json
@@ -7,9 +7,9 @@
     "build": "webpack"
   },
   "author": {
-    "name": "Joshua Walsh",
-    "email": "josh@ymindustries.com",
-    "url": "https://joshwalsh.me"
+    "name": "Yoshi Walsh",
+    "email": "yoshi@yoshiwalsh.me",
+    "url": "https://www.yoshiwalsh.me"
   },
   "private": "true",
   "license": "GPL",
