--- a/common/package.json
+++ b/common/package.json
@@ -7,9 +7,9 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": {
-		"name": "Joshua Walsh",
-		"email": "josh@ymindustries.com",
-		"url": "https://joshwalsh.me"
+		"name": "Yoshi Walsh",
+		"email": "yoshi@yoshiwalsh.me",
+		"url": "https://www.yoshiwalsh.me"
 	},
 	"private": "true",
 	"license": "GPL",
